logs/run1_batched_58911317.err
Traceback (most recent call last):
  File "/work/FAC/FDCA/IDHEAP/mhinterl/parp/PORTFOLIO_REPO/scripts/run1_title_triage_batched.py", line 8, in <module>
    from portfolio_repo.llm.run1_title_triage_batched import Run1Config, run1_title_triage_batched
  File "/work/FAC/FDCA/IDHEAP/mhinterl/parp/PORTFOLIO_REPO/src/portfolio_repo/llm/run1_title_triage_batched.py", line 267
    return out
    ^^^^^^^^^^
SyntaxError: 'return' outside function
